fix property names add fallback for scrollbar in firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', 'Tahoma', sans-serif;
-
+    scroll-behavior: smooth;
 }
 
 body {
@@ -99,7 +99,7 @@ header {
     color: rgb(0, 53, 102);
     font-weight: bold;
     margin: 0 2.5% 0.8rem 2.55%;
-    align-items: space-between  ;
+    justify-content: space-between  ;
     background-color: rgb(193, 255, 193);
     padding: 0.3rem 1.5rem;
     border-radius: 1.5rem;
@@ -330,14 +330,14 @@ button.opponent-button:active {
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 1rem;
-  align-items: bottom;
+  align-items: flex-end;
   width: 100%;
   padding: 0.9rem 0.5rem 1.4rem 0.5rem;
   border: 0.2rem solid rgba(255, 86, 182, 0.5);
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   margin-top: 0.5rem;
-box-shadow: inset 0 0.1rem 2rem rgba(240, 253, 255, 0.9);
+  box-shadow: inset 0 0.1rem 2rem rgba(240, 253, 255, 0.9);
   background-color: #8dffe2;
   border-radius: 0.5rem;
 }
@@ -480,7 +480,7 @@ box-shadow: inset 0 0.1rem 2rem rgba(240, 253, 255, 0.9);
 .move-button:active {
   background: rgb(226, 6, 98);
   box-shadow: #a5f838 0 0.1rem 0.7rem 0.5rem;
-  transition: 0.5sec smooth;
+  transition: 0.1s ease;
 }
 
 .selections {
@@ -530,16 +530,19 @@ footer {
   margin: 1rem 1.5rem 2rem 1.5rem;
 }
 
-footer p{
+footer >div {
   flex-wrap: wrap;
-  height: 2rem;
+  height: 4rem;
+  width: 28%;
+  margin-left: 5%;
   color: rgb(193, 255, 193);
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 1rem;
   overflow-y: auto;
   scroll-behavior: smooth;
 }
 
+/* This Scrollbar properties Work in Chrome, Safari, Edge (not Firefox) */
 footer p::-webkit-scrollbar {
   width: 15px;
 }
@@ -548,3 +551,11 @@ footer p::-webkit-scrollbar-thumb {
   border-radius: 10px;
   box-shadow: inset 0 0.1rem 0.4rem rgba(255, 255, 223, 0.9);
 }
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(110, 187, 184, 0.9) transparent;
+}
+
+
